--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ian kengott - ink</title>
-  <link rel="shortcut icon" href="C:\Users\ianke\Desktop\w\2\images\physics-svgrepo-com.svg" type="image/x-icon" />
+  <link rel="shortcut icon" href="\images\physics-svgrepo-com.svg" type="image/x-icon" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Hero Banner -->
   <header class="hero">
     <div class="hero-content">
-      <img src="C:\Users\ianke\Desktop\w\2\images\logo.svg" alt="Your Logo" class="logo" />
+      <img src="\images\logo.svg" alt="Your Logo" class="logo" />
       <h1>Ian kengott - ink</h1>
       <p>Your inspiring tagline goes here.</p>
     </div>
