--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="hero-content">
       <img src="\images\logo.svg" alt="Your Logo" class="logo" />
       <h1>Ian kengott - ink</h1>
-      <p>Your inspiring tagline goes here.</p>
+      <p>Learn and return, Live and desire, Elate and resonate</p>
     </div>
   </header>
 
