--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <style>
+body {
+  background-image: url('\images\logo.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
   <!-- Hero Banner -->
   <header class="hero">
     <div class="hero-content">
-      <img src="\images\logo.jpg" alt="Your Logo" class="logo" />
+   <!--   <img src="\images\logo.jpg" alt="Your Logo" class="logo" /> -->
       <h1>Ian kengott - ink</h1>
       <p>Learn and return, Live and desire, Elate and resonate</p>
     </div>
