--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Hero Banner -->
   <header class="hero">
     <div class="hero-content">
-   <!--   <img src="\images\logo.jpg" alt="Your Logo" class="logo" /> -->
+      <img src="\images\logo.jpg" alt="Your Logo" class="logo" /> 
       <h1>Ian kengott - ink</h1>
       <p>Learn and return, Live and desire, Elate and resonate</p>
     </div>
