--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <div class="hero-content">
       <img src="\images\logo.jpg" alt="Your Logo" class="logo" /> 
-      <h1>Ian kengott - ink</h1>
+     <!-- <h1>Ian kengott - ink</h1> -->
       <p>Learn and return, Live and desire, Elate and resonate</p>
     </div>
   </header>
@@ -20,6 +20,7 @@
   <!-- About Me Section -->
   <section class="about">
     <div class="container">
+      <h1>Ian kengott - ink</h1>
       <h2>About Me</h2>
       <p>
         Briefly introduce yourself, your background, and what you do. Include a few key accomplishments or skills.
