--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="hero-content">
       <img src="\images\logo.jpg" alt="Your Logo" class="logo" />   <!-- <p style="background image: URL(img/img.jpg);" > -->
      <!-- <h1>Ian kengott - ink</h1> -->
-      <p>Learn and return, Live and desire, Elate and resonate</p>
+      <p>Learn and return, Live and desire, Elate and resonate things to live by</p>
     </div>
   </header>
 
