--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Hero Banner -->
   <header class="hero">
     <div class="hero-content">
-      <img src="\images\logo.jpg" alt="Your Logo" class="logo" />   <!-- <p style="background image: URL(img/img.jpg);" > -->
+    <!--  <img src="\images\logo.jpg" alt="Your Logo" class="logo" />  -->
+       <p style="background image: URL(\images\logo.jpg);" >
      <!-- <h1>Ian kengott - ink</h1> -->
       <p>Learn and return, Live and desire, Elate and resonate things to live by</p>
     </div>
