--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--  <img src="\images\logo.jpg" alt="Your Logo" class="logo" />  -->
        <p style="background image: URL(\images\logo.jpg);" >
      <!-- <h1>Ian kengott - ink</h1> -->
-      <p>Learn and return, Live and desire, Elate and resonate things to live by</p>
+      <p>Learn and return, Live and desire, Elate and resonate -- things to live by</p>
     </div>
   </header>
 
