--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <div class="hero-content">
     <!--  <img src="\images\logo.jpg" alt="Your Logo" class="logo" />  -->
-       <p style="background image: URL(\images\logo.jpg);" >
+       <p style="background-image: url('/images/logo.jpg');">
      <!-- <h1>Ian kengott - ink</h1> -->
       <p>Learn and return, Live and desire, Elate and resonate -- things to live by</p>
     </div>
