--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ian kengott - ink</title>
-  <link rel="shortcut icon" href="\images\physics-svgrepo-com.svg" type="image/x-icon" />
+  <link rel="shortcut icon" href="/images/physics-svgrepo-com.svg" type="image/x-icon" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Hero Banner -->
   <header class="hero">
     <div class="hero-content">
-    <!--  <img src="\images\logo.jpg" alt="Your Logo" class="logo" />  -->
-       <p style="background-image: url('/images/logo.jpg');">
-     <!-- <h1>Ian kengott - ink</h1> -->
-      <p>Learn and return, Live and desire, Elate and resonate -- things to live by</p>
+      <!-- Logo Banner with Background Image -->
+      <div class="logo-banner" style="background-image: url('/images/logo.jpg');">
+        <h1>Ian kengott - ink</h1>
+        <p>Learn and return, Live and desire, Elate and resonate – things to live by</p>
+      </div>
     </div>
   </header>
 
