--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="hero-content">
       <!-- Logo Banner with Background Image -->
       <div class="logo-banner" style="background-image: url('/images/logo.jpg');">
+        <div class="logo-text">
         <h1>Ian kengott - ink</h1>
         <p>Learn and return, Live and desire, Elate and resonate – things to live by</p>
+        </div>
       </div>
     </div>
   </header>
