--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- Logo Banner with Background Image -->
       <div class="logo-banner" style="background-image: url('/images/logo.jpg');">
         <div class="logo-text">
-        <h1>Ian kengott - ink</h1>
+        <h5>Ian kengott</h5>
         <p>Learn and return, Live and desire, Elate and resonate – things to live by</p>
         </div>
       </div>
