--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="hero">
     <div class="hero-content">
       <!-- Logo Banner with Background Image -->
-      <div class="logo-banner" style="background-image: url('/images/323logo.jpg');">
+      <div class="logo-banner" style="background-image: url('/images/e.jpg');">
         <div class="logo-text">
         <h1>Ian kengott</h1>
         <p>Learn and return, Live and desire, Elate and resonate – things to live by</p>
