--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1></h1>
       <h2>About Me</h2>
       <p>
-        Briefly introduce yourself, your background, and what you do. Include a few key accomplishments or skills.
+        I'm a curious, driven individual passionate about continuous learning and creative problem-solving. With strengths in strategic planning, innovative thinking, and effective communication, I've led projects that deliver real results. I thrive on challenges and always aim to make a meaningful impact.
       </p>
       <a href="resume.pdf" download class="btn">Download Resume</a>
     </div>
