--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h2>My Projects</h2>
     <div class="portfolio-container">
       <div class="project-card">
-        <img src="project1.jpg" alt="Project 1" />
+        <img src="unnamed.png" alt="Project 1" />
         <div class="overlay">
           <h3>Project 1</h3>
           <p>Short description of project 1.</p>
