--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p id="modal-text">Project description goes here.</p>
   </div>
 </div>
-<div class="project-card" data-image="images/unnamed.png" data-text="This is the description of Project 1.">
+<div class="project-card" data-image="images/nasa.png" data-text="This is the description of Project 1.">
   <img src="images/nasa.png" alt="Project 1" />
   <div class="overlay">
     <h3>Project 1</h3>
