--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>
         I'm a curious, driven individual passionate about continuous learning and creative problem-solving. With strengths in strategic planning, innovative thinking, and effective communication, I've led projects that deliver real results. I thrive on challenges and always aim to make a meaningful impact.
       </p>
-      <a href="resume.pdf" download class="btn">Download Resume</a>
+      <a href="images/UC.doc" download class="btn">Download Resume</a>
     </div>
   </section>
 
