--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="logo-banner" style="background-image: url('/images/323logo.jpg');">
         <div class="logo-text">
         <h1>Ian kengott</h1>
-        <p>Learn and return, Live and desire, Elate and resonate – things to live by</p>
+        <p>Learn and return, Live and desire, Elate and resonate</p>
         </div>
       </div>
     </div>
