--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <img src="images/unnamed.png" alt="Project 1" />
   <div class="overlay">
     <h3>Project 1</h3>
-    <p>Short description of project 1.</p>
+    <p>I’ve always been passionate about exploring the frontiers of AI. I attended a Stanford AI camp in July 2022, where I was part of a team that developed an innovative system for reporting car crashes. My journey didn’t stop there—I’ve been actively involved in my robotics club, contributing to projects that included lunar exploration challenges and even a NASA-sponsored competition. More recently, I’ve dived into the realm of quantum computing, working with IBM’s Qiskit module to integrate quantum principles into practical applications. Each of these experiences has fueled my continuous learning and pushed me to blend creativity with technical expertise.</p>
     <a href="#" class="view-details">View Details</a>
   </div>
 </div>
