--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="project-card" data-image="images/unnamed.png" data-text="I’ve always been passionate about exploring the frontiers of AI. I attended a Stanford AI camp in July 2022, where I was part of a team that developed an innovative system for reporting car crashes. My journey didn’t stop there—I’ve been actively involved in my robotics club, contributing to projects that included lunar exploration challenges and even a NASA-sponsored competition. More recently, I’ve dived into the realm of quantum computing, working with IBM’s Qiskit module to integrate quantum principles into practical applications. Each of these experiences has fueled my continuous learning and pushed me to blend creativity with technical expertise.">
   <img src="images/unnamed.png" alt="Project 1" />
   <div class="overlay">
-    <h3>Project 1</h3>
+    <h3>Project:me</h3>
     <p>I advanced my AI journey by building a car crash reporting system at Stanford, contributing to NASA robotics projects, and exploring quantum computing with IBM Qiskit.</p>
     <a href="#" class="view-details">View Details</a>
   </div>
